[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptotoolbox"
version = "0.1.0"
description = "Small educational crypto utilities (wallet demo & vesting simulator)"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.8"
